# LisboaPulse

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  setup.cfg
event_management_service/: manage.py  pyproject.toml
event_management_service/event_service/: asgi.py  settings.py  urls.py  wsgi.py
event_management_service/event_service/events/: apps.py  models.py  serializers.py  urls.py  views.py
event_management_service/event_service/events/migrations/: 0001_initial.py  0002_alter_event_added_by.py  0003_alter_event_source.py  0004_alter_event_added_by.py  0005_alter_event_added_by_alter_event_date_and_more.py
scraper_service/: pyproject.toml
