[tool.poetry]
name = "lisboa-pulse"
version = "0.1.0"
description = "Monorepo for Lisboa Pulse microservices"
authors = ["Yulia Ioffe <https://github.com/leanor13>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pre-commit = "*"
black = "*"
isort = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
