[tool.poetry]
name = "lisboa-pulse"
version = "0.1.0"
description = "Monorepo for Lisboa Pulse microservices"
authors = ["Yulia Ioffe <https://github.com/leanor13>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
pre-commit = "^4.0.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
